--- a/ProjectHKII-Website/src/sass/components/category-detail.scss
+++ b/ProjectHKII-Website/src/sass/components/category-detail.scss
@@ -10,6 +10,9 @@
             font-weight: 500;
         }
        }
+       a.d-flex{
+        color: rgba(102,102,102,0.7);
+       }
        a:hover{
         color: #222;
         text-decoration: none;
@@ -94,6 +97,10 @@
                                             color: #334862;
                                             text-decoration: none;
                                         }
+                                        a:hover{
+                                            color: #000;
+                                            text-decoration: none; 
+                                        }
                                     }
                                     li.sub-item:last-child {
                                         border: none;
@@ -104,7 +111,97 @@
                         li.menu-item:last-child {
                             border: none;
                         }
-                    }  
+                    }
+                    ul.list{
+                        li.list-item{
+                            list-style-type: none;
+                            border-bottom: 1px dashed #ddd;
+                            font-size: 14px;
+                            padding: 6px 0px;
+                            list-style-type: none;
+                            a{
+                                img{
+                                    margin-right: 15px;;
+                                }
+                                span.name{
+                                    line-height: 1.3;
+                                    font-size: 14px;
+                                    color: #334682;
+                                }
+                                span.name:hover{
+                                    color: #000;
+                                    text-decoration: none;
+                                }
+                                span.cost{
+                                    line-height: 1.3;
+                                    font-size: 14px;
+                                    color: #111;
+                                    font-weight: 500;
+                                }
+                            }
+                        }
+                        li.list-item:last-child {
+                            border: none;
+                        }
+                    }      
+                }
+            }
+            .sidebar-title2 {
+                font-size: 1.65rem;
+                color: #000;
+                font-weight: 500;
+                padding: 24px 0px 24px;
+            }
+            .sidebar-content{
+                .widget-list-product{
+                    ul.list{
+                        li.list-item{
+                            a{
+                                color: #222;
+                                text-decoration: none;
+                            }
+                            a:hover{
+                                color: #000;
+                                text-decoration: none;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .products{
+            padding: 0 15px 30px;
+            width: 100%;
+            .form{
+                .form-row{
+                    .col-3.col-sm-3.form-group{
+                        a{
+                            color: #000;
+                            text-decoration: none;
+                            img{
+                                max-width: 200px;
+                                height: auto;
+                            }
+                            span.name{
+                                line-height: 1.3;
+                                font-size: 14.5px;
+                                color: #334682;
+                                text-align: center;
+                            }
+                            span.name:hover{
+                                color: #222;
+                                text-decoration: none;
+                            }
+                            span.cost{
+                                line-height: 1.3;
+                                font-size: 14.5px;
+                                color: #111;
+                                font-weight: 500;
+                                text-align: center;
+                                padding: 10px;
+                            }
+                        }
+                    }
                 }
             }
         }
